force-app/main/default/objects/Section__c/Section__c.object-meta.xml
<CustomObject>
    <label>Ticket Level</label>
    <nameField>
        <label>Ticket Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>