force-app/main/default/objects/Section__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <label># Available</label>
    <summaryFilterItems>
        <field>Seat_Lot__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Seat_Lot__c.Ticket_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>