force-app/main/default/objects/Section__c/fields/Migration_Source__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source__c</fullName>
    <label>Migration Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>