force-app/main/default/objects/Section__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>