force-app/main/default/objects/Section__c/fields/sfl_load_unique_id__c.field-meta.xml
<CustomField>
    <fullName>sfl_load_unique_id__c</fullName>
    <label>sfl load unique id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>