force-app/main/default/objects/Section__c/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <label># Sold</label>
    <summaryFilterItems>
        <field>Seat_Lot__c.Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Seat_Lot__c.Ticket_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>