force-app/main/default/objects/Section__c/fields/Total_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory__c</fullName>
    <label>Total Inventory</label>
    <summaryForeignKey>Seat_Lot__c.Ticket_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>