force-app/main/default/objects/Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Available__c</columns>
    <columns>Pending__c</columns>
    <columns>Sold__c</columns>
    <columns>Total_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>